# rust-actix-sample

./: .env  .env.test  Cargo.toml  Makefile  README.md  diesel.toml  docker-compose.yml
handler/: Cargo.toml
handler/src/: lib.rs
migrations/2020-06-20-150239_create_posts/: down.sql  up.sql
model/: Cargo.toml
model/src/: context.rs  lib.rs  schema.rs  task.rs  user.rs
repository/: Cargo.toml
repository/src/: lib.rs
script/: Cargo.toml
script/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: actions.rs  main.rs  models.rs  schema.rs
templates/: index.tera
