[package]
name = "rust-actix-sample"
version = "0.1.0"
authors = ["Koichi Tada <kou26haru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["mysql", "r2d2", "chrono"] }
r2d2 = "0.8.6"
mysql = "16"
chrono = {version = "0.4.11", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
