[package]
name = "handler"
version = "0.1.0"
authors = ["Koichi Tada <kou26haru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
chrono = {version = "0.4.11"}
diesel = { version = "1.4.5", features = ["mysql"] }
async-trait = "0.1.36"
model = {path="../model"}
repository = {path="../repository"}