[package]
name = "model"
version = "0.1.0"
authors = ["Koichi Tada <kou26haru@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
chrono = {version = "0.4.11", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.31"
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "mysql", "chrono" ] }
tera = "1.0"

