[package]
name = "model"
version = "0.1.0"
authors = ["Koichi Tada <kou26haru@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
chrono = {version = "0.4.11", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.31"
tera = "1.0"
diesel = { version = "1.4.5", features = ["mysql", "r2d2", "chrono"] }
r2d2 = "0.8.9"
