[package]
name = "repository"
version = "0.1.0"
authors = ["Koichi Tada <kou26haru@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.31"
diesel = { version = "1.4.5", features = ["mysql", "r2d2", "chrono"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
chrono = "0.4.13"
model = {path="../model"}
